==> KoljaWindeler/speedoino/STm32F429_Firmware/src/aktors.cpp <==
#include "global.h"

void akting::run_reset_on_ATm328(char mode){
	// serial setup and "klickibunti"-"show some msg"
	if(mode==RESET_COMPLETE || mode==RESET_PREPARE){
		Sensors.mReset.set_deactive(false,false);
		_delay_ms(100);// give serial 3 some time to send the messeage
//		Serial3.end();
		Serial.init(USART3,115200);
		TFT.clear_screen();
		TFT.string("Running Update",3,2);
		TFT.string("on AT328P",5,3);
	};

	// show "_R_to_trigger_reset__" only if in "preparation" mode
	if(mode==RESET_PREPARE){
		char temp[2];
		sprintf(temp,"%c",127);
		TFT.string(temp,1,7);
		TFT.string("to trigger reset",3,7);
	}

	// run the reset
//	if(mode==RESET_COMPLETE || mode==RESET_KICK_TO_RESET){
//		// pin as output
//		DDRD |= (1<<ATM328RESETPIN);
//		// set low . low active
//		PORTD &= ~(1<<ATM328RESETPIN);
//		_delay_ms(50);
//		PORTD |= (1<<ATM328RESETPIN);
//		// set high, as pull up
//		DDRD |= (1<<ATM328RESETPIN);
//		PORTD |= (1<<ATM328RESETPIN);
//	}

	// tunnel connection
	if(mode==RESET_COMPLETE || mode==RESET_PREPARE){
		// tunnel mode
		unsigned long timeout=Millis.get();
		unsigned long menu_state_on_enter=Menu.state; // save the menu state, to detect button pushes
		unsigned int max_time=5000; // should be enough if in android mode
		if(mode==RESET_PREPARE){ // longer timeout if in "menu-mode"
			max_time=30000;
		};
		while(Millis.get()-timeout<max_time){ // time out
			while(Serial.available(USART3)>0){
				Serial.puts(USART1,Serial.read(USART3));
				timeout=Millis.get();
			}
			while(Serial.available(USART1)>0){
				Serial.puts(USART3,Serial.read(USART1));
				timeout=Millis.get();
			}
			if(mode==RESET_PREPARE){
				if(menu_state_on_enter==((Menu.state/10))){ // button "right" was pushed
					run_reset_on_ATm328(RESET_KICK_TO_RESET); // to the reset
					Menu.state=menu_state_on_enter; // reset menu state
				} else if(menu_state_on_enter==((Menu.state*10)+1)){ // button "left" was pushed
					Menu.state=menu_state_on_enter; // reset menu state, because menu.back will otherwise recaluclate two steps back
					max_time=0;
					break;
				}
			}
		}
		Serial.init(USART3,19200);
		Sensors.mReset.set_active(false,false);
		Menu.back();
	};

}

void akting::init(){
	/* vier werte paare:
	 * 1. Außen . ändert sich öfters mal, wird mit std werten geladen
	 * 2. Innen . ändert sich eigentlich nie
	 * 3. Flasher . Farbe zu der übergeblendet wird wenn die schaltdrehzahl erreicht wird
	 * 4. out_base . Farbkopie von Außen
	 */

	dimm_step=0;
	dimm_steps=0;
	dimm_state=999; //unknown
	current_sensor_value=9999; // a very unrealistic value
	colorfade_active=true;
	control_lights=0x00;
	led_area_controll=0x00;
	expander_outdated=true;

//	// inner leds
//	RGB_IN_W_DIR  |= (1<<RGB_IN_W_PIN);   //pinMode(RGB_IN_W,OUTPUT);  TODO
//	// outer leds
//	RGB_OUT_R_DIR |= (1<<RGB_OUT_R_PIN); //pinMode(RGB_OUT_R,OUTPUT);
//	RGB_OUT_G_DIR |= (1<<RGB_OUT_G_PIN); //pinMode(RGB_OUT_G,OUTPUT);
//	RGB_OUT_B_DIR |= (1<<RGB_OUT_B_PIN); //pinMode(RGB_OUT_B,OUTPUT);
//
//	set_rgb_out(0,0,0); // dimm ich in main ein .. hmm
//
//	// see if its a clock startup or a regular startup
//	if(Speedo.startup_by_ignition){
//		// beleuchtung
//		TCCR4A|=1<<COM4B1; // RGB_OUT_R 7  OCR4B = val;
//		TCCR4A|=1<<COM4C1; // RGB_OUT_G 8  OCR4C = val;
//		TCCR2A|=1<<COM2B1; // RGB_OUT_B 9  OCR2B = val;
//
//		RGB_IN_W_PORT |= (1<<RGB_IN_W_PIN); // inner LED active
//		// beleuchtung
//
//		set_rbg_active((int)0x0000,false);
//		update_outer_leds(true,true);
//	};

	// stepper drehen
	mStepper.init();
	mOiler.init();

	// init port rep
//	I2c.write(PORT_REP_ADDR,0x00,0x00); TODO
//	I2c.write(PORT_REP_ADDR,0x01,0x00);

	Serial.puts_ln(USART1,("Aktoren init ... Done"));
}

int akting::set_bt_pin(){
	TFT.clear_screen();
	char at_commands[22];
	bool connection_established=true;

	// check connection
	TFT.string(Speedo.default_font,("Checking connection"),0,0);

	sprintf(at_commands,"ATQ0%c",0x0D);
	if(ask_bt(&at_commands[0])!=0){														// fehler aufgetreten
		connection_established=false;
		TFT.string(Speedo.default_font,("FAILED"),14,1);								// hat nicht geklappt
		_delay_ms(500);
		TFT.string(Speedo.default_font,("TRYING 19200 BAUD"),0,2);					// hat nicht geklappt
		Serial.init(USART1,19200);
		_delay_ms(2000);
		if(ask_bt(&at_commands[0])==0){
			TFT.string(Speedo.default_font,("OK"),14,3);
			_delay_ms(500);
			TFT.string(Speedo.default_font,("BASIC SETUP"),0,4);
			sprintf(at_commands,"ATE0%c",0x0D);
			if(ask_bt(&at_commands[0])==0){
				sprintf(at_commands,"ATN=SPEEDOINO%c",0x0D);
				if(ask_bt(&at_commands[0])==0){
					sprintf(at_commands,"ATL5%c",0x0D);
					ask_bt(&at_commands[0]);											// fire && forget
					TFT.string(Speedo.default_font,("OK"),14,5);				// wird schon auf anderer geschwindigkeit geantwortet, können wir hier nicht testen
					// setzte neue serielle Geschwindigkeit
					TFT.string(Speedo.default_font,("RETRYING"),0,6);		// hat nicht geklappt
					Serial.init(USART1,115200);
					_delay_ms(2000);
					TFT.clear_screen();
					TFT.string(Speedo.default_font,("Checking connection"),0,0);
					sprintf(at_commands,"AT%c",0x0D);									// gleich neu testen
					if(ask_bt(&at_commands[0])==0){
						connection_established=true;
						TFT.string(Speedo.default_font,("OK"),14,1);
					};
				}
			}
		} else {
			TFT.string(Speedo.default_font,("FAILED"),14,3);
			TFT.string(Speedo.default_font,("DAMN"),14,4); // add message to make sure no active bt connection disturbs TODO
			_delay_ms(4000);
			Serial.init(USART1,115200);
			return -9;
		}
	}

	if(connection_established){
		TFT.filled_rect(0,8,128,56,0x00); // clear the lower lines
		TFT.string(Speedo.default_font,("OK"),14,1);
		TFT.string(Speedo.default_font,("Activating responses"),0,2);
		sprintf(at_commands,"ATQ0%c",0x0D); // schaltet result codes ein				// jetzt richtig
		if(ask_bt(&at_commands[0])==0){
			TFT.string(Speedo.default_font,("OK"),14,3);
			TFT.string(Speedo.default_font,("Setting PIN Code"),0,4);
			sprintf(at_commands,"ATP=%04i%c",bt_pin,13);

			if(ask_bt(&at_commands[0])==0){
				TFT.string(Speedo.default_font,("OK"),14,5);
				TFT.string(Speedo.default_font,("Deactivating response"),0,6);
				sprintf(at_commands,"ATQ0%c",13); // schaltet result codes ein

				if(ask_bt(&at_commands[0])==0){
					TFT.string(Speedo.default_font,("OK"),14,7);
					_delay_ms(2000);
					return 0;
				}
			}
		}
	} else {
		ask_bt(&at_commands[0]);
		TFT.string(Speedo.default_font,("failed, hmmm"),0,1);
		_delay_ms(5000);
	}
	_delay_ms(2000);
	return -2;
}

int akting::ask_bt(char *command){
	uint8_t temp;
	return ask_bt(command,false,0,&temp); // by default no answere
}

int akting::ask_bt(char *buffer, bool answere_needed, int8_t max_length, uint8_t* char_rec){
	for(int looper=0;looper<30;looper++){
		Serial.puts(USART1,buffer);
		// A T \r \n O K \r \n = 8
		//warte bis der Buffer nicht voller wird
		_delay_ms(200);

		uint8_t ok_state=0; // 0 teile von "o" "k"
		int8_t n=0;
		*char_rec=0;
		char answere[20];
		while(Serial.available(USART1)){
			char temp = Serial.read(USART1);
			if(answere_needed){
				*char_rec=*char_rec+1;
				if(n<(max_length-1)){
					answere[n]=temp;
					n++;
					answere[n]=0x00; // EOString, 0x00 will be MAX in (max-length-1)
				};
			};

			if(temp=='O'){
				ok_state=1; // 1. TEIL
			} else if(temp=='K' && ok_state==1){
				strcpy(buffer,answere);
				return 0;

			} else {
				ok_state=0;
			}
		};
	};
	return -1;
}
